# mergy

./: .coverage  .gitignore  AGENTS.md  LICENSE  README.md  merger_models.py  merger_ops.py  mergy.py  mergy.spec  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: build-executable.yml
examples/test_data/: README.md
examples/test_data/computerNames/computer-01-backup/: data.txt
examples/test_data/computerNames/computer-01.old/: data.txt
examples/test_data/computerNames/computer-01.old/etc/: hostname
examples/test_data/computerNames/unrelated-folder/: other.txt
mergy/: __init__.py  cli.py
mergy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
mergy/matching/: __init__.py  folder_matcher.py
mergy/models/: __init__.py  data_models.py  match_reason.py
mergy/operations/: __init__.py  file_operations.py
mergy/orchestration/: __init__.py  merge_logger.py  merge_orchestrator.py
mergy/scanning/: __init__.py  file_hasher.py  folder_scanner.py
mergy/ui/: __init__.py  merge_tui.py
tests/: __init__.py  conftest.py  manual_tui_testing.md  requirements-test.txt  test_cli.py  test_file_hasher.py  test_file_operations.py  test_file_operations_integration.py  test_folder_matcher.py  test_folder_scanner.py  test_merge_logger.py  test_merge_orchestrator.py  test_merge_tui.py  test_orchestrator_integration.py  test_scanning_integration.py
tests/integration/: __init__.py  test_dry_run.py  test_merge_workflow.py  test_scanner.py
tests/unit/: test_file_operations.py  test_hasher.py  test_matcher.py  test_models.py
(+22 files in other folders)
